# harasho

./: .gitignore  Cargo.toml  README.md  priv.pem  server.py  ssl.sh
certs/: cert.ext  cert.pem  install.ps1  key.pem  more.sh  nesica1.crt  nesica1.csr  nesica1.key  nesica1.pem  nesica1.pfx  nesys.crt  nesys.csr  nesys.key  nesys.pfx  nesys.srl  root.crt  root.csr  root.key  root.pfx  root.srl
certs/test/: nesica1.crt  nesica1.key  nesys.crt  nesys.key  root.crt  root.key  root.pfx
docs/: LLSIFAC.postman_collection.json  README.md
src/: main.rs  routes.rs
src/cry/: aes.rs  https.rs
src/routes/: card_routes.rs  game_routes.rs
utils/: README.md  certs.sh  install.bat  nesys.bat  pad_plaintext.py  post.py  public_key.pem  runme.reg
