[package]
name = "harasho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-tls = "3.0.3"
#actix-web = {version = "4.3.0", features = ["rustls","openssl"]}
env_logger = "0.10.0"
log = "0.4.17"
mime = "0.3.16"
openssl = "0.10.52"
#rustls = "0.20.8"
#rustls-pemfile = "1.0.2"
aes = "0.8.2"
cfb-mode = "0.8.2"
serde = {version="1.0.163",features = ['derive']}
serde_json = {version = "1.0.96", features = ['std']}
rsa = "0.9.2"
rand = "0.8.5"
md-5 = "0.10.5"
hex-literal = "0.4.1"
actix-web = "4.4.0"
actix-files = "0.6.2"
colored = "2.0.4"
actix-service = "2.0.2"
futures-util = "0.3.28"
